# MY-learningcode

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  P_3809_模板_后缀排序.cpp  clangd.yaml  config.yaml  hello.cpp  pch.h  trick.txt
.cph/: .P_1105_平台.cpp_64c899ec1ba52890748461f681aeef5c.prob  .P_1266_速度限制.cpp_0e7b0b1967d6d80c08b6ede72e10babd.prob  .P_1547_USACO_05_MAR_Out_of_Hay_S.cpp_9e84d7aedc4cc366568ebc15d59570eb.prob  .P_1569_Generic_Cow_Protests.cpp_61427aa995eaec14935fa1bf3693bd80.prob  .P_3809_模板_后缀排序.cpp_8625901377f00221407209bb4fe54f5c.prob  .P_3809_模板_后缀排序.cpp_fbaed0ca20bb212834adc0c9c3d923cc.prob  .P_3916_图的遍历.cpp_7a98a36fb1987421bed2e7dbbab1f7ed.prob  .P_7939_Wdcfr_1_Alice_Wins_easy_version.cpp_d9357786ca5828c44f1ddca7ddf89940.prob  .hello.cpp_0f35e7cfb62e3fead5f60e3fbee3e138.prob  .hello.cpp_a527349d70b407eaecee83a7343e48fb.prob  .hello.cpp_ec68beda37c8976c632824f748daeae4.prob
2025电赛/: 1549.py  dfkjaslf.py  dfkslaf.py  官方.py  官方3.py  官方精简.py  激光.py  激光2.py  靶心.py  黑边白板.py  黑边白板2.py  黑边白板3.py
2025电赛/.cph/: .dfkjaslf.py_f1161ea84cc1748a5c80fc893ee10186.prob
3_16/: P_5546_POI_2000_公共串.cpp
3_16/.cph/: .P_5161_WD与数列.cpp_52fcdab7e98d8e8babf56257c9144b88.prob  .P_5546_POI_2000_公共串.cpp_34145beeefbc341d84a94f360ef4ebdc.prob  .P_5546_POI_2000_公共串.cpp_9223e55cb03db53a27c5c69d923b30b7.prob
3_16/output/: P_5161_WD与数列.exe.orig
AtCoder Beginner Contest 412/: A_Task_Failed_Successfully.cpp
AtCoder Beginner Contest 412/.cph/: .A_Task_Failed_Successfully.cpp_16a2032637d492c27ca487526b2171cf.prob  .B_Precondition.cpp_d48c15b1b5828b64c6ba336f5e843523.prob  .C_Giant_Domino.cpp_eefb7fcdf230bd12023b1eaefac6f84c.prob  .D_Make_2_Regular_Graph.cpp_5d47e2272c623b897a9a72975b580ba0.prob  .E_LCM_Sequence.cpp_73783db1e023fa6eb0d5be983ed828e2.prob  .F_Socks_4.cpp_5177d307a8a81c8248f182977f763dbf.prob  .G_Degree_Harmony.cpp_707f7e903ba31f7cee49a70c28d170b4.prob
Test/: B_Find_the_Permutation.cpp  P_11000_蓝桥杯_2024_省_Python_B_数字串个数.cpp  P_11001_蓝桥杯_2024_省_Python_B_连连看.cpp  P_11006_蓝桥杯_2024_省_Python_B_纯职业小组.cpp  P_2627_USACO_11_OPEN_Mowing_the_Lawn_G.cpp  a.cpp  b.py  conform.lua  keymaps.lua  stdc++.h  tfd.cpp  穿越时空之门.cpp
Test/.cph/: .B_Find_the_Permutation.cpp_4b31e0bf3cd0ebc1d05ab1f647bedb4b.prob  .P_11000_蓝桥杯_2024_省_Python_B_数字串个数.cpp_0d0cb376d6cdfddc294ea372cb6953e1.prob  .a.cpp_ccc74546189daf2e3f6ff6a28ba8ede6.prob  (+7 more)
lanqiao/: 005.cpp  007.cpp  P_10390_蓝桥杯_2024_省_A_因数计数.cpp  P_10429_蓝桥杯_2024_省_B_拔河.cpp
luogu/: D_Fun.cpp  input.txt
nowcode/round85/: CMakeLists.txt  hello.cpp  sdfs.cpp  yjkhk.cpp  小紫的_01_串操作.cpp  小紫的优势博弈.cpp  小紫的劣势博弈.cpp  小紫的均势博弈.cpp  小紫的树上染色.cpp  小紫的线段染色.cpp  最快相同.cpp  构造矩形.cpp
nowcode/round85/.cph/: .hello.cpp_5f1777924e7a07d7e219d1ff8bfef22d.prob  .sdfs.cpp_5a6bbc784e50c369d8a049b8b3572957.prob  .yjkhk.cpp_9f3ce321a6d9a028cec82c5bb7f6b74f.prob  .小紫的_01_串操作.cpp_8975932e6af09d46ad79eeb215c7e391.prob  .小紫的优势博弈.cpp_4209a5b389b4760e2214d490303f8aa3.prob  .小紫的优势博弈.cpp_8284d85275e45eaad986474fd92a154a.prob  .小紫的劣势博弈.cpp_ca327b375492dee4774895779b3e7d27.prob  .小紫的均势博弈.cpp_15097e934f35cb547aea23d5204d00d4.prob  .小紫的树上染色.cpp_0b3153d34902d9e71cad580801d4fa77.prob  .小紫的树上染色.cpp_cf95d232c84fef1ee38be6c4b4abd4e5.prob  .小紫的线段染色.cpp_9fc1f69450b68d65cc12b51f8e76f0d8.prob  .小紫的线段染色.cpp_f8da29e3256aea241026e0916cbfdd26.prob  .最快相同.cpp_49ea2822735dd82f4bb97d72db9091fb.prob  .构造矩形.cpp_49d81a0241b93434948b65c5642923c3.prob
nowcode/牛客小白月赛113/: 2025.cpp  CMakeLists.txt  hello.cpp  mex.cpp  可划分数组.cpp  好字符串.cpp  最小差值.cpp  连续数组.cpp
nowcode/牛客小白月赛113/.cache/clangd/index/: 2025.cpp.30121BC577F90DF9.idx  hello.cpp.018F7AD469F2E893.idx  mex.cpp.1BEB976FD76B9858.idx  可划分数组.cpp.DFFB71D4558C134F.idx  好字符串.cpp.A68A88226FD0B13F.idx  最小差值.cpp.B7B3BA6AC22ED9C1.idx  连续数组.cpp.EAD0E3DD4F2B2781.idx
nowcode/牛客小白月赛113/.cph/: .2025.cpp_2b0a5fdf21a1e97e0d1c04064d51abf6.prob  .hello.cpp_952c006c81a9c30a574481710c2a5620.prob  .mex.cpp_f06e9372d09d108f7387f152970d0f89.prob  .可划分数组.cpp_2a276f8e492d37d8bcc0da378a3ff106.prob  .好字符串.cpp_33dbd5d9e16d9255f286ddb9c2b1ff19.prob  .最小差值.cpp_0f03e120ce3403bd31b2bb434f5a65b2.prob  .连续数组.cpp_84dbe0c1a6e0e53b5fe0793b10173d52.prob
other/: P_1105_平台.cpp
(+1773 files in other folders)
